# SimpleServer

./: CMakeLists.txt
consoleapp/: CMakeLists.txt  consoleapp.cpp
src/: CMakeLists.txt  SimpleServer.cpp  SimpleServer.h
